--- a/circles.html
+++ b/circles.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>patatap clone</title>
+    <link rel="stylesheet" href="circles.css" />
     <script src="node_modules\paper\dist\paper-full.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
-      // Create a Paper.js Path to draw a line into it:
-      var path = new Path();
-      // Give the stroke a color
-      path.strokeColor = 'black';
-      var start = new Point(100, 100);
-      // Move to start and draw a line from there
-      path.moveTo(start);
-      // Note the plus operator on Point objects.
-      // PaperScript does that for us, and much more!
-      path.lineTo(start + [ 100, -50 ]);
+      for (var x = 0; x < 11; x++) {
+        for (var y = 0; y < 11; y++) {
+          new Path.Circle(new Point(x*100,y*100),10).strokeColor = "purple";
+        }
+      }
     </script>
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <script></script>
   </body>
 </html>
