--- a/circles.html
+++ b/circles.html
@@ -7,13 +7,23 @@
     <link rel="stylesheet" href="circles.css" />
     <script src="node_modules\paper\dist\paper-full.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
+      var circles = []
+
       tool.onKeyDown = function(event) {
         var maxPoint = new Point(view.size.width, view.size.height)
         var randomPoint = Point.random()
         var point = maxPoint * randomPoint
-        new Path.Circle(point,30).fillColor = 'red'
-
+        var newCircle = new Path.Circle(point,500)
+        newCircle.fillColor = 'red'
+        circles.push(newCircle)
         return false;
+      }
+
+      function onFrame(event) {
+        for (var i = 0; i < circles.length; i++) {
+          circles[i].fillColor.hue += 1;
+          circles[i].scale(.9);
+        }
       }
     </script>
   </head>
