implemented howler js

--- a/circles.html
+++ b/circles.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>patatap clone</title>
     <link rel="stylesheet" href="circles.css" />
+    <script src="node_modules\howler\src\howler.core.js"></script>
     <script src="node_modules\paper\dist\paper-full.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
       var circles = []
