--- a/circles.html
+++ b/circles.html
@@ -8,15 +8,30 @@
     <script src="node_modules\howler\src\howler.core.js"></script>
     <script src="node_modules\paper\dist\paper-full.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
+      var sounds = ['bubbles.mp3','clay.mp3','confetti.mp3','corona.mp3','dotted-spiral.mp3','flash-1.mp3','flash-2.mp3','flash-3.mp3','glimmer.mp3','moon.mp3','pinwheel.mp3','piston-1.mp3','piston-2.mp3','piston-3.mp3','prism-1.mp3','prism-2.mp3','prism-3.mp3','splits.mp3','squiggle.mp3','strike.mp3','suspension.mp3','timer.mp3','ufo.mp3','veil.mp3','wipe.mp3','zig-zag.mp3']
+      var keyData = {}
+      for (i = 0; i < 26; i++) {
+        var letter = (i+10).toString(36)
+        keyData[letter]= {
+          color: '#'+(0x1000000+(Math.random())*0xffffff).toString(16).substr(1,6),
+          sound: new Howl({
+            src: ['sounds/' + sounds[i]]
+          })
+        }
+      }
+
       var circles = []
 
       tool.onKeyDown = function(event) {
-        var maxPoint = new Point(view.size.width, view.size.height)
-        var randomPoint = Point.random()
-        var point = maxPoint * randomPoint
-        var newCircle = new Path.Circle(point,500)
-        newCircle.fillColor = 'red'
-        circles.push(newCircle)
+        if (keyData[event.key]) {
+          var maxPoint = new Point(view.size.width, view.size.height)
+          var randomPoint = Point.random()
+          var point = maxPoint * randomPoint
+          var newCircle = new Path.Circle(point,500)
+          newCircle.fillColor = keyData[event.key].color
+          keyData[event.key].sound.play()
+          circles.push(newCircle)
+        }
         return false;
       }
 
