--- a/circles.html
+++ b/circles.html
@@ -37,14 +37,29 @@
 
       function onFrame(event) {
         for (var i = 0; i < circles.length; i++) {
-          circles[i].fillColor.hue += 1;
           circles[i].scale(.9);
+          circles[i].fillColor.hue += 1;
+          if (circles[i].area < 1) {
+            circles[i].remove()
+            circles.splice(i,1)
+          }
         }
       }
     </script>
   </head>
   <body>
+    <div id="info-window">
+      <p id="info-text">
+        Press any letter key to start the app
+      </p>
+    </div>
     <canvas id="myCanvas"></canvas>
-    <script></script>
+    <script>
+      let root = document.getRootNode()
+      let infoWindow = document.getElementById('info-window')
+      root.addEventListener('keypress', function () {
+        infoWindow.style.display = 'none'
+      })
+    </script>
   </body>
 </html>
